<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context=".Register">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:text="@string/register"/>
        <ImageView
            android:id="@+id/profilepic"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text"
            android:layout_width="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="20dp"
            android:elevation="20dp"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_height="200dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/profilepic"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:hint="@string/username"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/email"
            android:textColorHint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@+id/username"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:hint="email"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:textColorHint="@color/colorAccent"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:hint="gender(male/female)"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:textColorHint="@color/colorAccent"
            android:layout_below="@+id/gender"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:hint="@string/age"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@+id/age"
            android:textColorHint="@color/colorAccent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:hint="mobile"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:textColorHint="@color/colorAccent"
            android:layout_below="@+id/mobile"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:hint="state"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:textColorHint="@color/colorAccent"
            android:layout_below="@+id/state"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:hint="@string/password"
            android:paddingStart="10dp" />
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:textColorHint="@color/colorAccent"
            android:layout_below="@+id/password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:hint="@string/confirm_password"
            android:paddingStart="10dp" />
        <Button
            android:id="@+id/signup"
            android:layout_width="150dp"
            android:textColor="@color/colorAccent"
            android:background="@color/buttoncolor"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/confirm_password"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            />
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>