<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relativelayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingBottom="10dp"
    android:background="@color/colorPrimaryDark"
    android:layout_height="200dp">
    <ImageView
        android:id="@+id/img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_centerVertical="true"
        android:layout_width="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_height="150dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:layout_toEndOf="@+id/img"
        android:paddingStart="10dp"
        android:text="@string/username"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:layout_toEndOf="@+id/img"
        android:paddingStart="10dp"
        android:text="@string/email"
        android:textColor="@color/colorAccent" />

    <!--<Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_marginStart="1dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="20dp"
        android:background="@color/buttoncolor"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent" />
-->
    <Button
        android:id="@+id/notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignEnd="@+id/email"
        android:layout_marginStart="23dp"
        android:layout_marginTop="37dp"
        android:background="@color/buttoncolor"
        android:text="@string/notify"
        android:textColor="@color/colorAccent" />


</RelativeLayout>