<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Drawer">

    <ImageView
        android:id="@+id/p_pic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/p_name"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/p_pic"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="53dp"
        android:paddingStart="10dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/p_pic"
        android:text="@string/username"
        android:textColor="#FDFBFB" />

    <TextView
        android:id="@+id/p_email"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/p_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/p_pic"
        android:text="@string/email"
        android:textColor="#FDFBFB" />

    <ImageView
        android:id="@+id/bar"
        android:layout_width="350dp"
        android:layout_height="4dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/p_pic"
        android:layout_marginTop="50dp"
        android:background="@color/buttoncolor"/>

    <TextView
        android:id="@+id/p_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar"
        android:layout_marginTop="20dp"
        android:text="Requests"
        android:paddingStart="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/p_buddies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/p_requests"
        android:layout_marginTop="40dp"
        android:text="Buddies"
        android:paddingStart="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />
    <Button
        android:id="@+id/signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signout"
        android:background="@color/buttoncolor"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        />
</RelativeLayout>